2011-04-12  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: InspectorTest.addObject dumps inner array properties as objects.
        https://bugs.webkit.org/show_bug.cgi?id=58310

        * http/tests/inspector/inspector-test.js:
        (initialize_InspectorTest.InspectorTest.addObject):
        (initialize_InspectorTest.InspectorTest.addArray):
        (initialize_InspectorTest.InspectorTest.dump):
        * http/tests/inspector/resource-har-conversion-expected.txt:
        * http/tests/inspector/resource-parameters-expected.txt:
        * inspector/protocol/console-agent-expected.txt:
        * inspector/protocol/runtime-agent-expected.txt:
        * inspector/report-protocol-errors-expected.txt:

2011-04-11  Stephen White  <senorblanco@chromium.org>

        Reviewed by James Robinson.

        [chromium] Accelerated canvas-to-canvas drawImage() is incorrect.
        https://bugs.webkit.org/show_bug.cgi?id=58258

        Add a new test to cover canvas-to-canvas drawImage() after a
        non-accelerated (strokeRect()) call.

        * fast/canvas/canvas-to-canvas-expected.txt: Added.
        * fast/canvas/canvas-to-canvas.html: Added.
        * fast/canvas/script-tests/canvas-to-canvas.js: Added.

2011-04-12  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [Chromium] Add some more tests for detailed heap snapshots UI.
        https://bugs.webkit.org/show_bug.cgi?id=58146

        * inspector/profiler/detailed-heapshots-comparison-expansion-preserved-when-sorting-expected.txt: Added.
        * inspector/profiler/detailed-heapshots-comparison-expansion-preserved-when-sorting.html: Added.
        * inspector/profiler/detailed-heapshots-comparison-show-all-expected.txt: Added.
        * inspector/profiler/detailed-heapshots-comparison-show-all.html: Added.
        * inspector/profiler/detailed-heapshots-comparison-show-next-expected.txt: Added.