@@ -1,3 +1,13 @@
+2011-04-12  Pavel Feldman  <pfeldman@google.com>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: cookies view is empty even for sites with cookies.
+        https://bugs.webkit.org/show_bug.cgi?id=58316
+
+        * http/tests/inspector/resource-tree-model-expected.txt: Added.
+        * http/tests/inspector/resource-tree-model.html: Added.
+
 2011-04-12  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Yury Semikhatsky.
